# cpm-appraisal

./: .gitignore  README.md  environment-cluster.yml  environment.yml  pyproject.toml  run_delftblue.md
data/outputs/: results.json  results_qwen.json
data/outputs/llama-3.1-8b-instant/: 20260613_133231.json  20260613_161957.json  20260614_112717.json  20260614_114059.json  20260614_115008.json  20260614_115310.json  20260614_120801.json
data/outputs/qwen-run/: temp_0.1.json  temp_0.2.json  temp_0.3.json  temp_0.4.json  temp_0.5.json
data/prototypes/: prototypes.json  weights.json
data/scenarios/: L1.json  L2.json  L3.json
jobs/: run_experiment.sh
scripts/: run_experiment.py
src/cpm_appraisal/: __init__.py  convergence.py  durations.py  generation.py  levels.py  llm.py  pipeline.py  reporting.py  scheduler.py  secs.py  types.py  utils.py
src/cpm_appraisal/appraisal/: __init__.py  levels.py  scheduler.py  secs.py
src/cpm_appraisal/convergence/: __init__.py
src/cpm_appraisal/emotions/: __init__.py  classify.py  dimensions.py  prototypes.py
src/cpm_appraisal/generation/: __init__.py
src/cpm_appraisal/llm/: __init__.py
src/cpm_appraisal/pipeline/: __init__.py
tests/: test_smoke.py
